Get user and logout
